--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "discordrpc",
+  "name": "nodejs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js-selfbot-v13": "^2.6.14",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "@types/node": "^18.0.6",
+    "discord.js": "^13.17.1"
   }
 }
