--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "nodejs",
+  "name": "factory-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6",
-    "discord.js": "^13.17.1"
-  }
+    "axios": "^1.4.0",
+    "discord.js": "^14.13.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.5"
+  },
+  "engines": {
+    "node": "16.x"
+  },
+  "license": "MIT"
 }
